tests/machine/x/hs/exists_builtin.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}
module Main where

import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)
import qualified Data.Map as Map
import Data.List (intercalate, isPrefixOf, isInfixOf)
import qualified Data.List as List



data = [1, 2]

flag = exists [x | x <- filter (\x -> (x == 1)) data]

main :: IO ()
main = do
    print (flag)
